crates/bevy_reflect/compile_fail/tests/derive.rs
fn main() -> compile_fail_utils::ui_test::Result<()> {
    compile_fail_utils::test("tests/reflect_derive")
}
